# Mesh-python

./: .gitignore  Auxiliar.py  CHANGELOG.md  CHARGE.py  CONTRIBUTING.md  DISCHARGE.py  EconomicFast.py  GraficosResultados.ipynb  GridConnected.py  LICENSE  MESH.py  MESH_old.py  Particle_old.py  Particles.py  README.md  benchmark.py  compiler.py  enviroment.yml  environment.yml  metrics.ipynb  pyproject.toml  run_mesh.py  run_parallel.py  setup.py  techno_ka.py
MESH.egg-info/: SOURCES.txt  top_level.txt
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
mesh/: Auxiliar.py  MESH.py  MESH_old.py  Particles.py
scripts/: GraficosResultados.ipynb  benchmark.py  compiler.py  fine_tuning.ipynb  functions_to_run.py  graficos.ipynb  metrics.ipynb  plotting.ipynb  problems.py  profile.py  profiler.py  run.ipynb  run_compiler.py  run_mesh.py  run_mesh_old.py  run_mesh_old_parallel.py  run_mesh_parallel.py  run_microgrid.py  run_parallel.py  runners.py  tuners.py
scripts/microgrid/: DISCHARGE.py  EconomicFast.py  GridConnected.py  techno_ka.py
scripts/microgrid_old/: CHARGE.py  techno_ka.py
scripts/notebooks/: benchmark.ipynb  fine_tuning.ipynb  metrics.ipynb  plotting.ipynb  run.ipynb  run_benchmark.ipynb  run_experiments.ipynb  runners.py  timing.ipynb  tuners.py
scripts/problems/: DTLZ.py  WFG.py  ZDT.py  benchmark_problems.py  functions.py  microgrid_function.py  problems.py  wfg_pareto_generation.py
scripts/seasonal_data/: load.txt  (+3 more)
seasonal_data/: solreal.txt  wind_data.txt
src/: MESH.py  MESH_old.py  Particle_old.py
tests/: test_mesh.py
(+66 files in other folders)
