[tool.poetry]
name = "mesh"
version = "0.1.0"
description = "implementation of MESH"
authors = ["Leonardo Veiga Acioly Filho"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
